force-app/main/default/objects/CI_Gem__c/CI_Gem__c.object-meta.xml
<CustomObject>
    <description>A gem in the context of Client Insights is a valuable nugget or gem of information associated to a particular user</description>
    <label>CI Gem</label>
    <nameField>
        <label>CI Gem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Gems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>