force-app/main/default/objects/CI_Gem__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client which the Gem relates to</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CI Gems</relationshipLabel>
    <relationshipName>CI_Gems</relationshipName>
    <type>Lookup</type>
</CustomField>