force-app/main/default/objects/CI_Gem__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Used to store custom data if needed, depending on the record type</description>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>