force-app/main/default/objects/CI_Gem__c/fields/Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Dismissed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the user has dismissed the Gem notification</description>
    <label>Dismissed</label>
    <type>Checkbox</type>
</CustomField>