force-app/main/default/objects/CI_Gem__c/recordTypes/News_Lead.recordType-meta.xml
<RecordType>
    <fullName>News_Lead</fullName>
    <active>true</active>
    <description>Lead created from a news article</description>
    <label>News Lead</label>
</RecordType>